En Turno funciona registrar, listar todos y listar por id.